# FiniteFluxNet

./: README.md  explore.ipynb  pyproject.toml
config/: config.yaml  cubic_config.yaml
data/: task.npz  task0.npz  task1.npz  task2.npz  task9.npz
src/: generate.py  task.py
