[project]
name = "foundation"
version = "0.1.0"
description = "Scratch ICON-style in-context operator learning experiments for 1D conservation laws."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jax[cpu]>=0.4.35",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false
